src/main/java/example/news/error/exceptions/BadRequredException.java
package example.news.error.exceptions;

public class BadRequredException extends RuntimeException {
    public BadRequredException(String message) {
        super(message);
    }
}
